# ai4trade-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yml  config.py  config_schema.py  docker-compose.yml  erstelle-eine-umfassende-tiefgehende-greedy-ritchie.md  main.py  pyproject.toml  rainbow.Dockerfile  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
adapters/: ai4trade_client.py  heartbeat.py  rainbow_publisher.py  rate_limiter.py  signal_publisher.py  task_handler.py
ai/: guardrails.py  sentiment.py  validation.py
backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  report.py  signal_replayer.py
chat/: commander.py
config/: watchdog.json
core/: ai_evaluator_bridge.py  db_maintenance.py  events.py  feature_pipeline.py  health.py  healthcheck_cmd.py  heartbeat_writer.py  llm.py  market_data.py  market_signals.py  metrics.py  outcome_tracker.py  predictive.py  risk_gate.py  secret_provider.py  sentiment.py  signal_adapter.py  signal_model.py  ssl_context.py  strategy.py  technical.py  two_factor.py  watchdog.py  watchdog_runner.py  whimsy.py
docs/: ai-evaluation-layer-research.md  freqtrade-integration.md  implementation-prep-report.md  incident-response.md  operations.md  recovery.md  scripts.md  signal-intelligence-mvp-report.md
exchanges/: base.py  bitget_rest.py  factory.py  market_stream.py
execution/: execution_audit.py  execution_guards.py  execution_models.py  order_executor.py  shadow_executor.py
integrations/: __init__.py  freqtrade_bridge.py  freqtrade_strategy.py  primoagent_bridge.py
monitoring/: alertmanager_rules.yml  alerts.py  model_monitor.py  prometheus.yml
rainbow/: __init__.py  config.yaml  exceptions.py  main.py  paths.py  symbols.py
scripts/: archive_signals.py  backup.sh  check_rainbow_metadata_completeness.py  generate_audit_artifacts.py  r7_smoke_check.py  train_xgboost.py  validate_config.py
storage/: repository.py  sqlite_repository.py
tests/: test_ai4trade_client.py  test_archive_signals.py  test_canonical_api.py  test_canonical_signal_registry_storage.py  test_commander.py  test_config_schema.py  test_critic_evaluator.py  test_events.py  test_extended_evaluation.py  test_freqtrade_bridge.py  test_health.py  test_health_endpoint.py  test_heartbeat.py  test_integration.py  test_legacy_side_write.py  test_llm.py  test_llm_evaluator_institutional.py  test_market_data.py  test_market_signals.py  test_metrics.py  test_model_monitor.py  test_notification_rules.py  test_onchain_collector.py  test_outcome_tracker.py  test_persistence.py  test_polymarket_collector.py  test_portfolio_circuit_breaker.py  test_position_state.py  test_r7_smoke_check.py  test_rainbow_contract_compatibility.py  test_rainbow_publisher.py  (+23 more)
(+220 files in other folders)
